# rtk

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
assets/materials/: 360map.yaml  WoodenCrate.yaml  bounds.yaml  hardwood.yaml  muro.yaml  nanosuit.yaml  teapot.yaml
assets/muro/: muro.mtl
cmake_modules/: FindGLFW.cmake  FindRTK.cmake  Findassimp.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
glad_debug/: CMakeLists.txt
glad_debug/src/: glad.c
rtk/: CMakeLists.txt  camera.cpp  camera.hpp  display.cpp  glad-config.cmake  glfw.cpp  glfw.hpp  main.cpp  mesh_ops.cpp  mesh_ops.hpp  rtk-config.cmake  rtk_fwd.hpp  rtk_init.cpp  rtk_init.hpp  utility.cpp  window.cpp  window.hpp
rtk/asset/: mesh_import.cpp
rtk/geometry/: mesh.cpp  mesh.hpp  path.cpp
rtk/gl/: .program.hpp.swp  mesh.cpp  mesh.hpp  path.cpp  program.cpp  program.hpp  shader.cpp  shader.hpp  vertex_buffer.cpp  vertex_buffer.hpp
rtk/graphics/: size.cpp  size.hpp  units.hpp
rtk/include/glad/: glad.h
rtk/include/rtk/: camera.hpp  display.hpp  framebuffer.hpp  mesh_ops.hpp  rtk_fwd.hpp  rtk_init.hpp  utility.hpp  window.hpp
rtk/include/rtk/asset/: mesh_import.hpp  rtk_assimp.hpp
rtk/include/rtk/geometry/: mesh.hpp  path.hpp
rtk/include/rtk/gl/: gl_resource.hpp  mesh.hpp  path.hpp  program.hpp  shader.hpp  vertex_buffer.hpp
rtk/include/rtk/graphics/: rect.hpp  size.hpp  units.hpp
rtk/include/rtk/physics/: aabb.hpp  transform.hpp
rtk/include/rtk/texture/: tex2d.hpp
rtk/physics/: aabb.hpp
rtk/src/: camera.cpp  display.cpp  framebuffer.cpp  mesh_ops.cpp  window.cpp
rtk/src/asset/: mesh_import.cpp
rtk/src/geometry/: mesh.cpp
rtk/src/gl/: mesh.cpp  program.cpp
rtk/src/physics/: transform.cpp
rtk/src/texture/: tex2d.cpp
shaders/: 360map.frag  360map.vert  basic.frag  basic.vert  contour.frag  depth_vis.frag  draw_tex.frag  edge_detect.frag  full_tex.vert  line.frag  line.geom  line.vert  object.frag  overlay.frag  phong.frag  phong.vert  skybox.frag  skybox.vert  thicker.frag
tests/: cam_controller.cpp  cam_controller.hpp  imgui_glfw.cpp  imgui_glfw.hpp  lighting.cpp  lighting.hpp  main.cpp  material.hpp  mtl_to_yaml.cpp  renderable.hpp  renderer.cpp  scene.hpp  shader_man.cpp  shader_man.hpp
